@@ -514,7 +514,7 @@ public class ExcelExtractor extends AbstractPOIFSExtractor {
                     if (officeParserConfig.isConcatenatePhoneticRuns()) {
                         String phonetic = (unicode != null && unicode.getExtendedRst() != null &&
                                 unicode.getExtendedRst().getPhoneticText() != null &&
-                                !unicode.getExtendedRst().getPhoneticText().isBlank()) ?
+                                !unicode.getExtendedRst().getPhoneticText().trim().isEmpty()) ?
                                 unicode.getExtendedRst().getPhoneticText() : "";
                         cellString = unicode.getString() + " " + phonetic;
                     } else {
