@@ -319,7 +319,7 @@ public class PDFMarkedContent2XHTML extends PDF2XHTML {
                     ignoreTag = true;
                 }
                 if (!ignoreTag) {
-                    if (tag.clazz != null && !tag.clazz.isBlank()) {
+                    if (tag.clazz != null && !tag.clazz.trim().isEmpty()) {
                         xhtml.startElement(tag.tag, "class", tag.clazz);
                     } else {
                         xhtml.startElement(tag.tag);
@@ -378,7 +378,7 @@ public class PDFMarkedContent2XHTML extends PDF2XHTML {
         //This is only for uris, obv.
         //If we want to catch within doc references (GOTO, we need to cache those in state.
         //See testPDF_childAttachments.pdf for examples
-        if (state.uri != null && !state.uri.isBlank()) {
+        if (state.uri != null && !state.uri.trim().isEmpty()) {
             xhtml.startElement("a", "href", state.uri);
             xhtml.characters(state.hrefAnchorBuilder.toString());
             xhtml.endElement("a");
